# llm-evaluation-toolkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  clean_indentation.py  fix_datasets.py  pyproject.toml  requirements.txt  run_eval.py  setup.py  test_unicode_fix.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/results/: comprehensive_eval.json  eval_results.json  unicode_test.json
examples/: comprehensive_demo.py  debug_metrics.py  demo.py
reports/: evaluation_report_20251211_021256.md  report_generator.py
src/: config.py  datasets.py  evaluator.py
src/llm_evaluation_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/metrics/: correctness.py  relevance.py
